# computorv1

./: Cargo.toml  Makefile  README.md  author
src/: compute.rs  grammar.pest  main.rs  parsing.rs  simplify.rs
