[package]
name = "computor"
version = "2020.12.10"
authors = ["Vincent Schlumberger <vischlum@student.42lyon.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
colored = "2"
structopt = "0.3.21"